src/unit_tests/CustSemantics/fail/rep-attrs.cl
class Main {
    a: Int;
    a: String;
};